--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/output.css" />
   </head>
   <body>
-    <div class="my-10 mx-5 font-sans-serif font-medium">
+    <div class="my-15 mx-5 font-sans-serif font-medium">
       <div class="bg-[#824FDE] rounded-lg p-8">
         <h1 class="text-5xl font-semibold text-white text-center mb-5">
           Social Media <br class="block sm:hidden" />
@@ -41,11 +41,56 @@
           class="mt-5 -mb-12 w-50"
         />
       </div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="bg-purple-100 rounded-lg p-7 mt-7">
+        <p class="text-2xl text-center">Schedule to social media.</p>
+        <img
+          src="./assets/images/illustration-schedule-posts.webp"
+          alt="schedule-posts"
+          class="w-100 mt-3 mb-3"
+        />
+        <p class="text-1xl font-normal text-center mx-10">
+          Optimize post timings to publish content at the perfect time for your
+          audience.
+        </p>
+      </div>
+      <div class="bg-purple-500 rounded-lg mt-7 p-7">
+        <img
+          src="./assets/images/illustration-grow-followers.webp"
+          alt="grow-followers"
+          class="w-60 ml-8"
+        />
+        <p class="text-3xl text-white font-medium text-center mx-10 mt-5">
+          Grow followers with non-stop content.
+        </p>
+      </div>
+      <div class="bg-pink-50 rounded-lg p-7 mt-7">
+        <p class="text-4xl font-bold mb-2">>56%</p>
+        <p class="font-light">faster audience growth</p>
+        <img
+          src="./assets/images/illustration-audience-growth.webp"
+          alt="audience"
+          class="w-35 mt-2"
+        />
+      </div>
+      <div class="bg-yellow-100 rounded-lg p-7 mt-7">
+        <p class="text-3xl font-medium">
+          Create and schedule content
+          <span class="text-purple-500">quicker</span>.
+        </p>
+        <img
+          src="./assets/images/illustration-create-post.webp"
+          alt="post"
+          class="w-50 mt-5"
+        />
+      </div>
+      <div class="bg-yellow-500 rounded-lg p-7 mt-7">
+        <p class="text-3xl font-medium">Write your content using AI.</p>
+        <img
+          src="./assets/images/illustration-ai-content.webp"
+          alt="content"
+          class="w-55 mt-5"
+        />
+      </div>
     </div>
   </body>
 </html>
