--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="src/output.css" />
   </head>
   <body>
-    <div class="my-15 mx-5 font-sans-serif font-medium">
-      <div class="bg-[#824FDE] rounded-lg p-8">
+    <div
+      class="my-15 mx-5 font-sans-serif font-medium md:grid md:grid-cols-4 md:grid-rows-3 md:gap-5"
+    >
+      <div
+        class="bg-[#824FDE] rounded-lg p-8 mt-7 md:col-start-2 md:col-end-4 md:row-start-1 md:row-end-2"
+      >
         <h1 class="text-5xl font-semibold text-white text-center mb-5">
           Social Media <br class="block sm:hidden" />
           <span class="text-yellow-500">10x</span>
@@ -25,7 +29,9 @@
           Over 4,000 5-star review
         </p>
       </div>
-      <div class="bg-pink-50 rounded-lg p-7 mt-7">
+      <div
+        class="bg-pink-50 rounded-lg p-7 mt-7 md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3 md:mt-0"
+      >
         <img
           src="./assets/images/illustration-multiple-platforms.webp"
           alt="multiple-platforms"
@@ -33,7 +39,9 @@
         />
         <p class="text-2xl">Manage multiple accounts and platforms.</p>
       </div>
-      <div class="bg-yellow-100 rounded-lg p-7 mt-7 overflow-hidden">
+      <div
+        class="bg-yellow-100 rounded-lg p-7 mt-7 overflow-hidden md:col-start-3 md:col-end-4 md:row-start-2 md:row-end-3 md:mt-0"
+      >
         <p class="text-2xl">Maintain a consistent posting schedule.</p>
         <img
           src="./assets/images/illustration-consistent-schedule.webp"
@@ -41,7 +49,9 @@
           class="mt-5 -mb-12 w-50"
         />
       </div>
-      <div class="bg-purple-100 rounded-lg p-7 mt-7">
+      <div
+        class="bg-purple-100 rounded-lg p-7 mt-7 md:col-start-4 md:col-end-5 md:row-start-1 md:row-end-3"
+      >
         <p class="text-2xl text-center">Schedule to social media.</p>
         <img
           src="./assets/images/illustration-schedule-posts.webp"
@@ -53,7 +63,9 @@
           audience.
         </p>
       </div>
-      <div class="bg-purple-500 rounded-lg mt-7 p-7">
+      <div
+        class="bg-purple-500 rounded-lg mt-7 p-7 md:col-start-3 md:col-end-5 md:row-start-3 md:row-end-4 md:mt-0"
+      >
         <img
           src="./assets/images/illustration-grow-followers.webp"
           alt="grow-followers"
@@ -63,7 +75,9 @@
           Grow followers with non-stop content.
         </p>
       </div>
-      <div class="bg-pink-50 rounded-lg p-7 mt-7">
+      <div
+        class="bg-pink-50 rounded-lg p-7 mt-7 md:col-start-2 md:col-end-3 md:row-start-3 md:row-end-4 md:mt-0"
+      >
         <p class="text-4xl font-bold mb-2">>56%</p>
         <p class="font-light">faster audience growth</p>
         <img
@@ -72,7 +86,9 @@
           class="w-35 mt-2"
         />
       </div>
-      <div class="bg-yellow-100 rounded-lg p-7 mt-7">
+      <div
+        class="bg-yellow-100 rounded-lg p-7 mt-7 md:col-start-1 md:col-end-2 md:row-start-1 md:row-end-2"
+      >
         <p class="text-3xl font-medium">
           Create and schedule content
           <span class="text-purple-500">quicker</span>.
@@ -83,7 +99,9 @@
           class="w-50 mt-5"
         />
       </div>
-      <div class="bg-yellow-500 rounded-lg p-7 mt-7">
+      <div
+        class="bg-yellow-500 rounded-lg p-7 mt-7 md:col-start-1 md:col-end-2 md:row-start-2 md:row-end-4 md:mt-0"
+      >
         <p class="text-3xl font-medium">Write your content using AI.</p>
         <img
           src="./assets/images/illustration-ai-content.webp"
