completed work on responsiveness

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <div
-      class="my-15 mx-5 font-sans-serif font-medium md:grid md:grid-cols-4 md:grid-rows-3 md:gap-5"
+      class="my-15 mx-5 font-sans-serif font-medium md:grid md:grid-cols-4 md:grid-rows-3 md:gap-4 md:mx-auto md:my-auto md:w-200 md:h-160 md:mt-10"
     >
       <div
-        class="bg-[#824FDE] rounded-lg p-8 mt-7 md:col-start-2 md:col-end-4 md:row-start-1 md:row-end-2"
+        class="bg-[#824FDE] rounded-lg p-8 mt-7 md:col-start-2 md:col-end-4 md:row-start-1 md:row-end-2 md:-mb-10"
       >
-        <h1 class="text-5xl font-semibold text-white text-center mb-5">
+        <h1
+          class="text-5xl font-semibold text-white text-center mb-5 md:text-4xl"
+        >
           Social Media <br class="block sm:hidden" />
           <span class="text-yellow-500">10x</span>
           <span class="italic">Faster</span>
@@ -30,19 +32,23 @@
         </p>
       </div>
       <div
-        class="bg-pink-50 rounded-lg p-7 mt-7 md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3 md:mt-0"
+        class="bg-pink-50 rounded-lg p-7 mt-7 md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3 md:mt-10 md:-mb-6"
       >
         <img
           src="./assets/images/illustration-multiple-platforms.webp"
           alt="multiple-platforms"
           class="mb-2"
         />
-        <p class="text-2xl">Manage multiple accounts and platforms.</p>
+        <p class="text-2xl md:text-xl md:leading-none md:pt-3">
+          Manage multiple accounts and platforms.
+        </p>
       </div>
       <div
-        class="bg-yellow-100 rounded-lg p-7 mt-7 overflow-hidden md:col-start-3 md:col-end-4 md:row-start-2 md:row-end-3 md:mt-0"
+        class="bg-yellow-100 rounded-lg p-7 mt-7 overflow-hidden md:col-start-3 md:col-end-4 md:row-start-2 md:row-end-3 md:mt-10 md:-mb-6"
       >
-        <p class="text-2xl">Maintain a consistent posting schedule.</p>
+        <p class="text-2xl md:text-xl md:leading-none">
+          Maintain a consistent posting schedule.
+        </p>
         <img
           src="./assets/images/illustration-consistent-schedule.webp"
           alt="shedule"
@@ -50,36 +56,36 @@
         />
       </div>
       <div
-        class="bg-purple-100 rounded-lg p-7 mt-7 md:col-start-4 md:col-end-5 md:row-start-1 md:row-end-3"
+        class="bg-purple-100 rounded-lg p-7 mt-7 md:col-start-4 md:col-end-5 md:row-start-1 md:row-end-3 md:-mb-6 md:p-0 md:overflow-hidden"
       >
-        <p class="text-2xl text-center">Schedule to social media.</p>
+        <p class="text-2xl text-center md:leading-none md:text-xl md:mt-8 md:px-7 md:text-left">Schedule to social media.</p>
         <img
           src="./assets/images/illustration-schedule-posts.webp"
           alt="schedule-posts"
-          class="w-100 mt-3 mb-3"
+          class="w-100 mt-3 mb-3 md:h-60 md:w-100 md:ml-8"
         />
-        <p class="text-1xl font-normal text-center mx-10">
+        <p class="text-1xl font-normal text-center mx-10 md:text-xs md:font-normal md:text-left md:mx-0 md:leading-none md:px-7">
           Optimize post timings to publish content at the perfect time for your
           audience.
         </p>
       </div>
       <div
-        class="bg-purple-500 rounded-lg mt-7 p-7 md:col-start-3 md:col-end-5 md:row-start-3 md:row-end-4 md:mt-0"
+        class="bg-purple-500 rounded-lg mt-7 p-7 md:col-start-3 md:col-end-5 md:row-start-3 md:row-end-4 md:mt-6 md:p-0 md:grid md:grid-cols-[200px_1fr] md:items-center"
       >
         <img
           src="./assets/images/illustration-grow-followers.webp"
           alt="grow-followers"
-          class="w-60 ml-8"
+          class="w-60 ml-8 md:w-40 md:h-35 md:ml-4"
         />
-        <p class="text-3xl text-white font-medium text-center mx-10 mt-5">
+        <p class="text-3xl text-white font-medium text-center mx-10 mt-5 md:text-2xl md:mx-0 md:text-left md:leading-none md:-ml-2 md:-mt-4">
           Grow followers with non-stop content.
         </p>
       </div>
       <div
-        class="bg-pink-50 rounded-lg p-7 mt-7 md:col-start-2 md:col-end-3 md:row-start-3 md:row-end-4 md:mt-0"
+        class="bg-pink-50 rounded-lg p-7 mt-7 md:col-start-2 md:col-end-3 md:row-start-3 md:row-end-4 md:mt-6"
       >
-        <p class="text-4xl font-bold mb-2">>56%</p>
-        <p class="font-light">faster audience growth</p>
+        <p class="text-4xl font-bold mb-2 md:text-3xl">>56%</p>
+        <p class="font-light md:text-xs">faster audience growth</p>
         <img
           src="./assets/images/illustration-audience-growth.webp"
           alt="audience"
@@ -87,9 +93,9 @@
         />
       </div>
       <div
-        class="bg-yellow-100 rounded-lg p-7 mt-7 md:col-start-1 md:col-end-2 md:row-start-1 md:row-end-2"
+        class="bg-yellow-100 rounded-lg p-7 mt-7 md:col-start-1 md:col-end-2 md:row-start-1 md:row-end-2 md:-mb-30"
       >
-        <p class="text-3xl font-medium">
+        <p class="text-3xl font-medium md:text-2xl">
           Create and schedule content
           <span class="text-purple-500">quicker</span>.
         </p>
@@ -100,9 +106,11 @@
         />
       </div>
       <div
-        class="bg-yellow-500 rounded-lg p-7 mt-7 md:col-start-1 md:col-end-2 md:row-start-2 md:row-end-4 md:mt-0"
+        class="bg-yellow-500 rounded-lg p-7 mt-7 md:col-start-1 md:col-end-2 md:row-start-2 md:row-end-4 md:mt-30"
       >
-        <p class="text-3xl font-medium">Write your content using AI.</p>
+        <p class="text-3xl font-medium md:text-2xl md:leading-none md:mb-10">
+          Write your content using AI.
+        </p>
         <img
           src="./assets/images/illustration-ai-content.webp"
           alt="content"
